@@ -7,7 +7,9 @@ Release 8.4-dev
   - HYDRA_PROXY_AUTH was deprecated, set login/password in HTTP_PROXY[_HTTP]
 * New protocol: adam6500 - this one is work in progress, please test and report
 * New protocol: rpcap! thanks to Petar Kaleychev <petar.kaleychev@gmail.com>
-* New command line option -y which disables -x 1aA interpretation, thanks to crondaemon for the patch
+* New command line options:
+   -y : disables -x 1aA interpretation, thanks to crondaemon for the patch
+   -I : ignore an existing hydra.restore file (dont wait for 10 seconds)
 * The protocols vnc, xmpp, telnet, imap, nntp and pcanywhere got accidentially long sleep commands due a patch in 8.2, fixed
 * Added special error message for clueless users :)
 
